Adaugat search si optimizat sa mearga cum trebuie, reparat buguri pe backstack

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ProfileActivity"></activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:windowSoftInputMode="adjustNothing">
+        </activity>
         <activity android:name=".LoginActivity"></activity>
 
         <meta-data
