--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Book Hook"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -26,6 +26,7 @@
             android:name=".ProfileActivity"
             android:windowSoftInputMode="adjustNothing">
         </activity>
+        <activity android:name=".PaymentActivity"></activity>
         <activity android:name=".LoginActivity"></activity>
 
         <meta-data
