--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".PaymentActivity"></activity>
         <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".VerifyPhoneNumberActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
