--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +23,14 @@
         </activity>
 
         <activity
-            android:name=".ProfileActivity"
+            android:name=".activities.ProfileActivity"
             android:windowSoftInputMode="adjustNothing">
         </activity>
-        <activity android:name=".PaymentActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".VerifyPhoneNumberActivity"></activity>
+        <activity android:name=".activities.PaymentActivity"></activity>
+        <activity android:name=".activities.LoginActivity"></activity>
+        <activity android:name=".util.VerifyPhoneNumberActivity"></activity>
+        <activity android:name=".activities.OrganiserFormActivity"></activity>
+        <activity android:name=".activities.OrganiserProfileActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
